# rm-movie_reservation-ml

./: README.md  compose.yml
.idx/: dev.nix
DB/movie-db/: Dockerfile  init.sql
DB/reservation-db/: Dockerfile  init.sql
DB/showtime-db/: Dockerfile  init.sql
DB/user-db/: Dockerfile  init.sql
Docs/Postman/: movie system.postman_collection.json
api-gateway/: Dockerfile  nginx.conf
movie-service/: .gitignore  Dockerfile  go.mod  go.sum
movie-service/cmd/: main.go
movie-service/internal/config/: config.go
movie-service/internal/handlers/: movieHandler.go
movie-service/internal/models/: movie.go
movie-service/internal/repositories/: movieRepository.go
rabbitMQ/: Dockerfile
reservation-service/: Dockerfile  README.md  build.gradle  go.mod  go.sum  micronaut-cli.yml  settings.gradle
reservation-service/cmd/: main.go
showtime-service/: Dockerfile  TODO_springWebfluxPj.txt  build.gradle
user-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
user-service/api/v1/routers/: auth_routes.py  user_routes.py
user-service/api/v1/schemas/: login_schema.py  user_schema.py
user-service/config/: session.py  settings.py
user-service/db/: session.py
user-service/db/models/: user.py
user-service/db/repositories/: user_repository.py
user-service/models/: user.py
user-service/repositories/: user_repository.py
user-service/routes/: user_routes.py
user-service/schemas/: user_schema.py
user-service/services/: auth_service.py  user_service.py
user-service/utils/: dependencies.py  jwt_helper.py  rabbitmq.py
(+46 files in other folders)
