[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Juan Esteban Escobar Restrepo <138255902+YugenDev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
bcrypt = "4.2.0"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.2"
greenlet = "3.1.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
idna = "3.10"
packaging = "24.1"
passlib = "1.7.4"
pika = "1.3.2"
psycopg2-binary = "2.9.10"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyjwt = "2.9.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.40.0"
tenacity = "9.0.0"
timedelta = "2020.12.3"
typing-extensions = "4.12.2"
uvicorn = "0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
